--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -930,3 +930,11 @@ KAFKA_API_VERSION = tuple({{ localsettings.KAFKA_API_VERSION }})
 {% if localsettings.ICDS_USE_CITUS is defined %}
 ICDS_USE_CITUS = {{ localsettings.ICDS_USE_CITUS }}
 {% endif %}
+
+{% if localsettings.STATIC_DATA_SOURCE_PROVIDERS is defined %}
+STATIC_DATA_SOURCE_PROVIDERS = [
+{% for provider in localsettings.STATIC_DATA_SOURCE_PROVIDERS %}
+    '{{ provider }}',
+{% endfor %}
+]
+{% endif %}
