--- a/src/commcare_cloud/ansible/roles/formplayer/templates/application.properties.j2
+++ b/src/commcare_cloud/ansible/roles/formplayer/templates/application.properties.j2
@@ -17,6 +17,19 @@ sentry.dsn={{ formplayer_sentry_dsn }}?http.proxy.host={{ http_proxy_address }}&
 sentry.dsn={{ formplayer_sentry_dsn }}
 {% endif %}
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://{{ postgresql_dbs.formplayer.pgbouncer_host }}:{{ postgresql_dbs.formplayer.port
+}}/{{ formplayer_db_name }}?prepareThreshold=0
+spring.datasource.username={{ postgres_users.commcare.username }}
+spring.datasource.password={{ postgres_users.commcare.password }}
+
+spring.flyway.url=jdbc:postgresql://{{ postgresql_dbs.formplayer.pgbouncer_host }}:{{ postgresql_dbs.formplayer.port }}/{{ formplayer_db_name }}?prepareThreshold=0
+spring.flyway.user={{ postgres_users.commcare.username }}
+spring.flyway.password={{ postgres_users.commcare.password }}
+spring.flyway.locations=classpath:db/migration
+spring.flyway.table=schema_version
+
+###### deprecated
 datasource.formplayer.driverClassName=org.postgresql.Driver
 datasource.formplayer.url=jdbc:postgresql://{{ postgresql_dbs.formplayer.pgbouncer_host }}:{{ postgresql_dbs.formplayer.port
 }}/{{ formplayer_db_name }}?prepareThreshold=0
@@ -29,6 +42,7 @@ flyway.user={{ postgres_users.commcare.username }}
 flyway.password={{ postgres_users.commcare.password }}
 flyway.driverClassName=org.postgresql.Driver
 flyway.location=classpath:db/migration
+######
 
 spring.jpa.hibernate.ddl-auto
 
