--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -813,8 +813,7 @@ SENTRY_QUERY_URL = '{{ SENTRY_QUERY_URL }}'
 GREENHOUSE_API_KEY = '{{ GREENHOUSE_API_KEY }}'
 {% endif %}
 
-LOCAL_LOGGING_LOGGERS = {{ localsettings.get('LOCAL_LOGGING_LOGGERS', {}) }}
-LOCAL_LOGGING_HANDLERS = {{ localsettings.get('LOCAL_LOGGING_HANDLERS', {}) }}
+LOCAL_LOGGING_CONFIG = json.loads('{{ localsettings.get('LOCAL_LOGGING_LOGGERS', {})|to_json }}')
 LOCAL_MIDDLEWARE = {{ localsettings.get('LOCAL_MIDDLEWARE', [])|to_json }}
 
 {% if localsettings.get('SUMOLOGIC_URL') %}
