--- a/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
@@ -41,8 +41,15 @@ unix_socket_dir = /var/run/postgresql
 ;;;
 ;;; Authentication settings
 ;;;
-
+{% if inventory_hostname in groups['citusdb_worker'] %}
+;; SSL needed to connect between citus controller and worker machines.
+client_tls_sslmode = prefer
+client_tls_key_file = {{ postgresql_data_dir }}/server.key
+client_tls_cert_file = {{ postgresql_data_dir }}/server.crt
+auth_type = trust
+{% else %}
 auth_type = md5
+{% endif %}
 auth_file = {{ pgbouncer_users }}
 
 ;;;
