--- a/environments/india/inventory.ini.j2
+++ b/environments/india/inventory.ini.j2
@@ -42,6 +42,22 @@ citus2standby
 citus1standby
 citus2standby
 
+[citus1:vars]
+postgresql_replication_slots=['standby0']
+hot_standby_server=10.203.10.220
+
+[citus2:vars]
+postgresql_replication_slots=['standby0']
+hot_standby_server=10.203.10.105
+
+[citus1standby:vars]
+replication_slot=standby0
+hot_standby_master=10.203.10.74
+
+[citus2standby:vars]
+replication_slot=standby0
+hot_standby_master=10.203.10.190
+
 [proxy:children]
 proxy1
 
