--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -872,9 +872,10 @@ AUDIT_VIEWS= [
 ]
 {% endif %}
 
-{% if localsettings.get('ICDS_CAS_ALWAYS_ENABLED_TOGGLES') is not none %}
-ICDS_CAS_ALWAYS_ENABLED_TOGGLES = {{ localsettings.ICDS_CAS_ALWAYS_ENABLED_TOGGLES }}
+{% if localsettings.get('STATIC_TOGGLE_STATES') is not none %}
+STATIC_TOGGLE_STATES = {{ localsettings.STATIC_TOGGLE_STATES }}
 {% endif %}
+
 
 {% if localsettings.get('ICDS_CAS_ALWAYS_DISABLED_TOGGLES') is not none %}
 ICDS_CAS_ALWAYS_DISABLED_TOGGLES = {{ localsettings.ICDS_CAS_ALWAYS_DISABLED_TOGGLES }}
