--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -45,14 +45,17 @@ DATABASES = { {% for config in postgresql_dbs.all %}
             'ACCEPTABLE_REPLICATION_DELAY': {{ config.acceptable_replication_delay }},
         }
     {% endif -%}
-        {% if postgresql_dbs.form_processing and (config.get('shards') or config.name == postgresql_dbs.form_processing.proxy.name) -%}
+        {% if postgresql_dbs.form_processing and config.get('shards') -%}
         'PLPROXY': {
-            {% if config.get('shards') -%}
             'SHARDS': {{config.shards|to_json}},
-            {% endif -%}
-            {% if config.name == postgresql_dbs.form_processing.proxy.name -%}
+        }
+    {% elif postgresql_dbs.form_processing and config.name == postgresql_dbs.form_processing.proxy.name -%}
+        'PLPROXY': {
             'PROXY': True,
-        {% endif -%}
+        }
+    {% elif postgresql_dbs.form_processing and config.name == postgresql_dbs.form_processing.proxy_standby.name -%}
+        'PLPROXY': {
+            'PROXY_FOR_STANDBYS': True,
         }
     {% endif -%}
     },
