--- a/src/commcare_cloud/ansible/roles/elasticsearch/templates/config/elasticsearch.yml.j2
+++ b/src/commcare_cloud/ansible/roles/elasticsearch/templates/config/elasticsearch.yml.j2
@@ -55,7 +55,7 @@ index.search.slowlog.threshold.query.warn: 10s
 index.search.slowlog.threshold.query.info: 5s
 index.search.slowlog.threshold.query.debug: 2s
 index.search.slowlog.threshold.query.trace: 500ms
-setting index.max_result_window: 1000000
+index.max_result_window: 1000000
 
 {% if elasticsearch_fielddata_cache_size|default('') %}
 indices.fielddata.cache.size:  {{ elasticsearch_fielddata_cache_size }}
