--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -114,6 +114,8 @@ EMAIL_SMTP_PORT = {{ localsettings.EMAIL_SMTP_PORT }}
 EMAIL_BACKEND='django.core.mail.backends.console.EmailBackend'
 {% endif %}
 
+RETURN_PATH_EMAIL_PASSWORD = '{{ RETURN_PATH_EMAIL_PASSWORD }}'
+
 EMAIL_SUBJECT_PREFIX = '[{{ env_monitoring_id }}] '
 
 ENABLE_SOFT_ASSERT_EMAILS = {{ localsettings.ENABLE_SOFT_ASSERT_EMAILS|default(False) }}
@@ -861,6 +863,7 @@ STATIC_TOGGLE_STATES = {{ localsettings.STATIC_TOGGLE_STATES }}
 
 SERVER_EMAIL = '{{ server_email }}'
 DEFAULT_FROM_EMAIL = '{{ default_from_email }}'
+RETURN_PATH_EMAIL = '{{ return_path_email }}'
 SUPPORT_EMAIL = '{{ support_email }}'
 PROBONO_SUPPORT_EMAIL = '{{ probono_support_email }}'
 CCHQ_BUG_REPORT_EMAIL = '{{ cchq_bug_report_email }}'
